Increase font size. Tune labels.

--- a/ivb.html
+++ b/ivb.html
@@ -35,37 +35,35 @@
       border: none;
       background: none;
       text-shadow: 1px 1px 2px white;
-      font-size: 8px;
+      font-size: 10px;
+      font-weight: bold;
       white-space: nowrap;
-      margin: -1em 0 0 1em !important;
+      margin: -10px 0 0 10px !important;
     }
     .L1.Stubaitalbahnhof,
+    .L3.Bürgerstraße,
     .L6.Bergisel,
     .Hauptbahnhof-STB {
       display: none;
     }
-    .Maria-Theresien-Straße,
+    .Terminal-Marktplatz, .Maria-Theresien-Straße,
     .Leipziger-Platz, .Philippine-Welser-Straße,
     .Höttinger-Au-West, .Höttinger-Auffahrt,
     .Bretterkeller, .Tummelplatz, .Tantegert, .Lans-Sistrans, .Lansersee, .Bahnhof-Igls,
     .Mutters, .Burgstall, .Hölltal, .Gärberbach {
-      margin-top: 0.5em !important;
+      margin-top: 5px !important;
     }
-    .Maria-Theresien-Straße {
-      width: 15em !important;
-      white-space: inherit;
-    }
-    .Fürstenweg, .Klinik-Universität,
+    .Landesmuseum, .Fürstenweg, .Klinik-Universität,
     .Anichstraße-Rathausgalerien,
     .Fritz-Konzert-Straße {
-      margin-top: -2em !important;
+      margin-top: -20px !important;
     }
     .Bürgerstraße, .Triumphpforte {
-      margin-top: -2.5em !important;
+      margin-top: -25px !important;
       margin-left: 0em !important;
     }
     .Mutters, .Natters {
-      margin-left: -5em !important;
+      margin-left: -50px !important;
     }
   </style>
 </head>
