Vienna S-Bahn map

--- a/ivb.html
+++ b/ivb.html
@@ -65,6 +65,16 @@
     .Mutters, .Natters {
       margin-left: -50px !important;
     }
+    .angle0, .angle180, .angle-180 {
+      -webkit-transform-origin: 0 0;
+      -webkit-transform: rotate(30deg);
+      display: block;
+    }
+    .angle135 {
+      -webkit-transform-origin: 0 0;
+      -webkit-transform: rotate(-30deg);
+      display: block;
+    }
   </style>
 </head>
 <body>
