Increase font size for terminal stops

--- a/ivb.html
+++ b/ivb.html
@@ -40,6 +40,10 @@
       white-space: nowrap;
       margin: -10px 0 0 10px !important;
     }
+    .L3.Amras, .L3.Höttinger-Au-West, .L1.Mühlauer-Brücke, .L1.Bergisel, .Hauptbahnhof, .LSTB.Fulpmes, .L6.Igls {
+      display: block;
+      font-size: 15px;
+    }
     .L1.Stubaitalbahnhof,
     .L3.Bürgerstraße,
     .L6.Bergisel,
@@ -52,6 +56,16 @@
     .Bretterkeller, .Tummelplatz, .Tantegert, .Lans-Sistrans, .Lansersee, .Bahnhof-Igls,
     .Mutters, .Burgstall, .Hölltal, .Gärberbach {
       margin-top: 5px !important;
+    }
+    .Höttinger-Au-West {
+      margin-top: 10px !important;
+    }
+    .Bergisel {
+      margin-left: 15px !important;
+      margin-top: -20px !important;
+    }
+    .Stubaitalbahnhof {
+      margin-left: -115px !important;
     }
     .Landesmuseum, .Fürstenweg, .Klinik-Universität,
     .Anichstraße-Rathausgalerien,
