--- a/wiwosm.html
+++ b/wiwosm.html
@@ -4,11 +4,11 @@
   <title>WIWOSM</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.js"></script>
+  <script src="//code.jquery.com/jquery-latest.min.js"></script>
+  <script src="//cdn.leafletjs.com/leaflet-0.4.5/leaflet.js"></script>
   <script src="semicircle.js"></script>
   <script src="map.js"></script>
-  <script src="http://svn.osgeo.org/metacrs/proj4js/trunk/lib/proj4js-compressed.js"></script>
+  <script src="//svn.osgeo.org/metacrs/proj4js/trunk/lib/proj4js-compressed.js"></script>
   <script>
     $(function () {
       //var colors = ['A6CEE3', '1F78B4', 'B2DF8A', '33A02C', 'FB9A99', 'E31A1C', 'FDBF6F', 'FF7F00', 'CAB2D6', '6A3D9A', 'FFFF99'];
@@ -37,9 +37,9 @@
         return geojson;
       };
       var map = POImap.init();
-      $.getJSON('https://toolserver.org/~simon04/cats.php', {lang: 'de', cat: 'Bahnstrecke in Österreich'}, function (json) {
+      $.getJSON('//toolserver.org/~simon04/cats.php', {lang: 'de', cat: 'Bahnstrecke in Österreich'}, function (json) {
         $(json.sort()).each(function (i, article) {
-          $.getJSON('https://toolserver.org/~simon04/getGeoJSON.php', {lang: 'de', article: article}, function (geojson) {
+          $.getJSON('//toolserver.org/~simon04/getGeoJSON.php', {lang: 'de', article: article}, function (geojson) {
             article = article.replace(/_/g, ' ');
             geojson = unprojectGeoJson(geojson);
             var layer = L.geoJson(geojson, {
@@ -47,7 +47,7 @@
                 return {color: '#' + colors[Math.abs(article.hashCode()) % colors.length]};
               },
               onEachFeature: function (feature, layer) {
-                layer.bindPopup('<a href="http://de.wikipedia.org/wiki/' + article.replace(/ /g, '_') + '" target="_blank">' + article + '</a>');
+                layer.bindPopup('<a href="//de.wikipedia.org/wiki/' + article.replace(/ /g, '_') + '" target="_blank">' + article + '</a>');
               }
             }).addTo(map);
             map.getControl().addOverlay(layer, article);
@@ -56,8 +56,8 @@
       });
     });
   </script>
-  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.css" />
-  <!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.ie.css" /><![endif]-->
+  <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.4.5/leaflet.css" />
+  <!--[if lte IE 8]><link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.4.5/leaflet.ie.css" /><![endif]-->
   <style>
     body {
       padding: 0;
