--- a/aed.html
+++ b/aed.html
@@ -4,8 +4,8 @@
   <title>AED Map</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.js"></script>
+  <script src="//code.jquery.com/jquery-latest.min.js"></script>
+  <script src="//cdn.leafletjs.com/leaflet-0.4.5/leaflet.js"></script>
   <script src="map.js"></script>
   <script>
     var map;
@@ -16,13 +16,13 @@
 
     function loadAed() {
       var aedIcon = L.icon({
-        iconUrl: 'https://upload.wikimedia.org/wikipedia/commons/thumb/b/bc/Automated_External_Defibrillator_%28symbol%29.svg/16px-Automated_External_Defibrillator_%28symbol%29.svg.png',
+        iconUrl: '//upload.wikimedia.org/wikipedia/commons/thumb/b/bc/Automated_External_Defibrillator_%28symbol%29.svg/16px-Automated_External_Defibrillator_%28symbol%29.svg.png',
         iconSize: new L.Point(16, 16),
         iconAnchor: new L.Point(8, 8),
         shadowSize: new L.Point(0, 0)
       });
 
-      var aedUrl = 'http://overpass-api.de/api/interpreter?data=[out:json];node[emergency=aed];out;node[medical=aed];out;';
+      var aedUrl = '//overpass-api.de/api/interpreter?data=[out:json];node[emergency=aed];out;node[medical=aed];out;';
       var aedInfo = function(tags) {
         var r = $('<table>');
         for (var key in tags)
@@ -40,8 +40,8 @@
     }
 
   </script>
-  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.css" />
-  <!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.ie.css" /><![endif]-->
+  <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.4.5/leaflet.css" />
+  <!--[if lte IE 8]><link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.4.5/leaflet.ie.css" /><![endif]-->
   <style>
     body {
       padding: 0;
