Make includes of js/css protocol-independent

--- a/wiwosm.html
+++ b/wiwosm.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="//code.jquery.com/jquery-latest.min.js"></script>
-  <script src="//cdn.leafletjs.com/leaflet-0.4.5/leaflet.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.js"></script>
   <script src="semicircle.js"></script>
   <script src="map.js"></script>
-  <script src="//svn.osgeo.org/metacrs/proj4js/trunk/lib/proj4js-compressed.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.5/proj4.js"></script>
   <script>
     $(function () {
       //var colors = ['A6CEE3', '1F78B4', 'B2DF8A', '33A02C', 'FB9A99', 'E31A1C', 'FDBF6F', 'FF7F00', 'CAB2D6', '6A3D9A', 'FFFF99'];
@@ -56,8 +56,7 @@
       });
     });
   </script>
-  <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.4.5/leaflet.css" />
-  <!--[if lte IE 8]><link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.4.5/leaflet.ie.css" /><![endif]-->
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.css" />
   <style>
     body {
       padding: 0;
