--- a/restaurant.html
+++ b/restaurant.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="//code.jquery.com/jquery-latest.min.js"></script>
-  <script src="//cdn.leafletjs.com/leaflet-0.4.5/leaflet.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.js"></script>
   <script src="map.js"></script>
   <script>
     var map, ids = {};
@@ -51,8 +51,7 @@
     }
 
   </script>
-  <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.4.5/leaflet.css" />
-  <!--[if lte IE 8]><link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.4.5/leaflet.ie.css" /><![endif]-->
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.css" />
   <style>
     body {
       padding: 0;
