--- a/ivb.html
+++ b/ivb.html
@@ -25,7 +25,7 @@
       font: 12px 'Droid Sans', sans-serif;
     }
     .leaflet-tile {
-      -webkit-filter: grayscale(1);
+      filter: grayscale(1);
       opacity: 0.5 !important;
     }
     .leaflet-div-icon {
@@ -39,25 +39,24 @@
       white-space: nowrap;
       margin: -10px 0 0 10px !important;
     }
-    .L3.Amras, .L3.Höttinger-Au-West, .L1.Mühlauer-Brücke, .L1.Bergisel, .Hauptbahnhof, .LSTB.Fulpmes, .L6.Igls {
+    .L3.Amras, .L3.Technik-West, .L3.Peerhofsiedlung,
+    .L1.Mühlauer-Brücke, .L1.Bergisel,
+    .Hauptbahnhof, .LSTB.Fulpmes, .L6.Igls {
       display: block;
       font-size: 15px;
     }
     .L1.Stubaitalbahnhof,
     .L3.Bürgerstraße,
     .L6.Bergisel,
-    .Hauptbahnhof-STB {
+    .LSTB.Innsbruck-Hauptbahnhof {
       display: none;
     }
-    .Terminal-Marktplatz, .Maria-Theresien-Straße,
-    .Leipziger-Platz, .Philippine-Welser-Straße,
+    .Philippine-Welser-Straße,
     .Höttinger-Au-West, .Höttinger-Auffahrt,
+    .Vögelebichl, .Lohbachsiedlung-Ost, .Technik, .Lahntalweg, .Technik-West,
     .Bretterkeller, .Tummelplatz, .Tantegert, .Lans-Sistrans, .Lansersee, .Bahnhof-Igls,
     .Mutters, .Burgstall, .Hölltal, .Gärberbach {
       margin-top: 5px !important;
-    }
-    .Höttinger-Au-West {
-      margin-top: 10px !important;
     }
     .Bergisel {
       margin-left: 15px !important;
@@ -66,14 +65,33 @@
     .Stubaitalbahnhof {
       margin-left: -115px !important;
     }
-    .Landesmuseum, .Fürstenweg, .Klinik-Universität,
+    .Lohbachsiedlung-West, .Leipziger-Platz,
+    .Museumstraße, .Landesmuseum,
+    .Fürstenweg,
     .Anichstraße-Rathausgalerien,
     .Fritz-Konzert-Straße {
       margin-top: -20px !important;
     }
-    .Bürgerstraße, .Triumphpforte {
+    .Anichstraße-Rathausgalerien {
+      margin-left: 20px !important;
+    }
+    .Maria-Theresien-Straße {
+      margin-left: -30px !important;
+      margin-top: 10px !important;
+    }
+    .Klinik-Universität {
+      margin-left: -125px !important;
+    }
+    .Terminal-Marktplatz {
+      margin-left: -105px !important;
+      margin-top: -20px !important;
+    }
+    .Triumphpforte {
       margin-top: -25px !important;
       margin-left: 0em !important;
+    }
+    .Bürgerstraße {
+      margin-left: -75px !important;
     }
     .Mutters, .Natters {
       margin-left: -50px !important;
