Map for Christkindlbahn

--- a/ivb.html
+++ b/ivb.html
@@ -39,11 +39,16 @@
       white-space: nowrap;
       margin: -10px 0 0 10px !important;
     }
+    .Innsbruck-Hauptbahnhof,
     .L3.Amras, .L3.Technik-West, .L3.Peerhofsiedlung,
     .L1.Mühlauer-Brücke, .L1.Bergisel,
     .Hauptbahnhof, .LSTB.Fulpmes, .L6.Igls {
       display: block;
       font-size: 15px;
+      color: #990000;
+    }
+    .Innsbruck-Hauptbahnhof {
+      margin-left: -205px !important;
     }
     .L1.Stubaitalbahnhof,
     .L3.Bürgerstraße,
@@ -68,12 +73,12 @@
     .Lohbachsiedlung-West, .Leipziger-Platz,
     .Museumstraße, .Landesmuseum,
     .Fürstenweg,
-    .Anichstraße-Rathausgalerien,
     .Fritz-Konzert-Straße {
       margin-top: -20px !important;
     }
     .Anichstraße-Rathausgalerien {
-      margin-left: 20px !important;
+      margin-top: 10px !important;
+      margin-left: -5px !important;
     }
     .Maria-Theresien-Straße {
       margin-left: -30px !important;
