--- a/ivb.html
+++ b/ivb.html
@@ -39,23 +39,45 @@
       white-space: nowrap;
       margin: -10px 0 0 10px !important;
     }
-    .L3.Amras, .L3.Technik-West, .L3.Peerhofsiedlung,
-    .L1.Mühlauer-Brücke, .L1.Bergisel,
-    .Hauptbahnhof, .LSTB.Fulpmes, .L6.Igls {
+    .L3.Amras,
+    .L2.Technik-West,
+    .L2.Peerhofsiedlung,
+    .L2.Josef-Kerschbaumer-Straße,
+    .L1.Mühlauer-Brücke,
+    .L1.Bergisel,
+    .Hauptbahnhof,
+    .LSTB.Fulpmes,
+    .L6.Igls {
       display: block;
       font-size: 15px;
     }
     .L1.Stubaitalbahnhof,
-    .L3.Bürgerstraße,
+    .L2.Leipziger-Platz,
+    .L5.Leipziger-Platz,
+    .L5.Technik-West,
     .L6.Bergisel,
     .LSTB.Innsbruck-Hauptbahnhof {
       display: none;
     }
+    .Mitterhoferstraße,
     .Philippine-Welser-Straße,
-    .Höttinger-Au-West, .Höttinger-Auffahrt,
-    .Vögelebichl, .Lohbachsiedlung-Ost, .Technik, .Lahntalweg, .Technik-West,
-    .Bretterkeller, .Tummelplatz, .Tantegert, .Lans-Sistrans, .Lansersee, .Bahnhof-Igls,
-    .Mutters, .Burgstall, .Hölltal, .Gärberbach {
+    .Höttinger-Au-West,
+    .Höttinger-Auffahrt,
+    .Vögelebichl,
+    .Lohbachsiedlung-Ost,
+    .Technik,
+    .Lahntalweg,
+    .Technik-West,
+    .Bretterkeller,
+    .Tummelplatz,
+    .Tantegert,
+    .Lans-Sistrans,
+    .Lansersee,
+    .Bahnhof-Igls,
+    .Mutters,
+    .Burgstall,
+    .Hölltal,
+    .Gärberbach {
       margin-top: 5px !important;
     }
     .Bergisel {
@@ -65,12 +87,18 @@
     .Stubaitalbahnhof {
       margin-left: -115px !important;
     }
-    .Lohbachsiedlung-West, .Leipziger-Platz,
-    .Museumstraße, .Landesmuseum,
+    .Lohbachsiedlung-West,
+    .Leipziger-Platz,
+    .Museumstraße,
+    .Landesmuseum,
     .Fürstenweg,
     .Anichstraße-Rathausgalerien,
+    .Schützenstraße,
     .Fritz-Konzert-Straße {
       margin-top: -20px !important;
+    }
+    .Jugendherberge {
+      margin-top: 20px !important;
     }
     .Anichstraße-Rathausgalerien {
       margin-left: 20px !important;
@@ -82,18 +110,20 @@
     .Klinik-Universität {
       margin-left: -125px !important;
     }
+    .Radetzkystraße,
     .Terminal-Marktplatz {
       margin-left: -105px !important;
       margin-top: -20px !important;
     }
-    .Triumphpforte {
+    .Triumphpforte-Casino {
       margin-top: -25px !important;
       margin-left: 0em !important;
     }
     .Bürgerstraße {
       margin-left: -75px !important;
     }
-    .Mutters, .Natters {
+    .Mutters,
+    .Natters {
       margin-left: -50px !important;
     }
   </style>
