--- a/aed.html
+++ b/aed.html
@@ -1,58 +1,66 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>AED Map</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="//code.jquery.com/jquery-latest.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.js"></script>
-  <script src="map.js"></script>
-  <script>
-    var map;
-    $(function () {
-      map = POImap.init();
-      loadAed();
-    });
-
-    function loadAed() {
-      var aedIcon = L.icon({
-        iconUrl: '//upload.wikimedia.org/wikipedia/commons/thumb/b/bc/Automated_External_Defibrillator_%28symbol%29.svg/16px-Automated_External_Defibrillator_%28symbol%29.svg.png',
-        iconSize: new L.Point(16, 16),
-        iconAnchor: new L.Point(8, 8),
-        shadowSize: new L.Point(0, 0)
+  <head>
+    <title>AED Map</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="//code.jquery.com/jquery-latest.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.js"></script>
+    <script src="map.js"></script>
+    <script>
+      var map;
+      $(function() {
+        map = POImap.init();
+        loadAed();
       });
 
-      var aedUrl = '//overpass-api.de/api/interpreter?data=[out:json];node[emergency=aed];out;node[medical=aed];out;';
-      var aedInfo = function(tags) {
-        var r = $('<table>');
-        for (var key in tags)
-          r.append($('<tr>').append($('<th>').text(key)).append($('<td>').text(tags[key])));
-        return $('<div>').append(r).html();
-      };
-      $.getJSON(aedUrl, function(data) {
-        $.each(data.elements, function(ign, i) {
-          var pos = new L.LatLng(i.lat, i.lon);
-          var popup = aedInfo(i.tags);
-          var marker = new L.Marker(pos, {icon: aedIcon}).bindPopup(popup);
-          map.addLayer(marker);
+      function loadAed() {
+        var aedIcon = L.icon({
+          iconUrl:
+            '//upload.wikimedia.org/wikipedia/commons/thumb/b/bc/Automated_External_Defibrillator_%28symbol%29.svg/16px-Automated_External_Defibrillator_%28symbol%29.svg.png',
+          iconSize: new L.Point(16, 16),
+          iconAnchor: new L.Point(8, 8),
+          shadowSize: new L.Point(0, 0)
         });
-      });
-    }
 
-  </script>
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.css" />
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-    }
-    html, body, #map {
-      height: 100%;
-    }
-  </style>
-</head>
-<body>
-  <div id="map"></div>
-</body>
+        var aedUrl =
+          '//overpass-api.de/api/interpreter?data=[out:json];node[emergency=aed];out;node[medical=aed];out;';
+        var aedInfo = function(tags) {
+          var r = $('<table>');
+          for (var key in tags)
+            r.append(
+              $('<tr>')
+                .append($('<th>').text(key))
+                .append($('<td>').text(tags[key]))
+            );
+          return $('<div>')
+            .append(r)
+            .html();
+        };
+        $.getJSON(aedUrl, function(data) {
+          $.each(data.elements, function(ign, i) {
+            var pos = new L.LatLng(i.lat, i.lon);
+            var popup = aedInfo(i.tags);
+            var marker = new L.Marker(pos, {icon: aedIcon}).bindPopup(popup);
+            map.addLayer(marker);
+          });
+        });
+      }
+    </script>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.css" />
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+      }
+      html,
+      body,
+      #map {
+        height: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="map"></div>
+  </body>
 </html>
-
