--- a/ivb.html
+++ b/ivb.html
@@ -1,135 +1,136 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>IVB Map</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="//code.jquery.com/jquery-latest.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.js"></script>
-  <script src="semicircle.js"></script>
-  <script src="map.js"></script>
-  <script src="map.ivb.js"></script>
-  <script>
-    $(function () {
-      IVB.init();
-    });
-  </script>
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.css" />
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-    }
-    html, body, #map {
-      height: 100%;
-      font: 12px 'Droid Sans', sans-serif;
-    }
-    .leaflet-tile {
-      filter: grayscale(1);
-      opacity: 0.5 !important;
-    }
-    .leaflet-div-icon {
-      width: auto !important;
-      height: auto !important;
-      border: none;
-      background: none;
-      text-shadow: 1px 1px 2px white;
-      font-size: 10px;
-      font-weight: bold;
-      white-space: nowrap;
-      margin: -10px 0 0 10px !important;
-    }
-    .L3.Amras,
-    .L2.Technik-West,
-    .L2.Peerhofsiedlung,
-    .L2.Josef-Kerschbaumer-Straße,
-    .L1.Mühlauer-Brücke,
-    .L1.Bergisel,
-    .Hauptbahnhof,
-    .LSTB.Fulpmes,
-    .L6.Igls {
-      display: block;
-      font-size: 15px;
-    }
-    .L1.Stubaitalbahnhof,
-    .L2.Leipziger-Platz,
-    .L5.Leipziger-Platz,
-    .L5.Technik-West,
-    .L6.Bergisel,
-    .LSTB.Innsbruck-Hauptbahnhof {
-      display: none;
-    }
-    .Mitterhoferstraße,
-    .Philippine-Welser-Straße,
-    .Höttinger-Au-West,
-    .Höttinger-Auffahrt,
-    .Vögelebichl,
-    .Lohbachsiedlung-Ost,
-    .Technik,
-    .Lahntalweg,
-    .Technik-West,
-    .Bretterkeller,
-    .Tummelplatz,
-    .Tantegert,
-    .Lans-Sistrans,
-    .Lansersee,
-    .Bahnhof-Igls,
-    .Mutters,
-    .Burgstall,
-    .Hölltal,
-    .Gärberbach {
-      margin-top: 5px !important;
-    }
-    .Bergisel {
-      margin-left: 15px !important;
-      margin-top: -20px !important;
-    }
-    .Stubaitalbahnhof {
-      margin-left: -115px !important;
-    }
-    .Lohbachsiedlung-West,
-    .Leipziger-Platz,
-    .Museumstraße,
-    .Landesmuseum,
-    .Fürstenweg,
-    .Anichstraße-Rathausgalerien,
-    .Schützenstraße,
-    .Fritz-Konzert-Straße {
-      margin-top: -20px !important;
-    }
-    .Jugendherberge {
-      margin-top: 20px !important;
-    }
-    .Anichstraße-Rathausgalerien {
-      margin-left: 20px !important;
-    }
-    .Maria-Theresien-Straße {
-      margin-left: -30px !important;
-      margin-top: 10px !important;
-    }
-    .Klinik-Universität {
-      margin-left: -125px !important;
-    }
-    .Radetzkystraße,
-    .Terminal-Marktplatz {
-      margin-left: -105px !important;
-      margin-top: -20px !important;
-    }
-    .Triumphpforte-Casino {
-      margin-top: -25px !important;
-      margin-left: 0em !important;
-    }
-    .Bürgerstraße {
-      margin-left: -75px !important;
-    }
-    .Mutters,
-    .Natters {
-      margin-left: -50px !important;
-    }
-  </style>
-</head>
-<body>
-  <div id="map"></div>
-</body>
+  <head>
+    <title>IVB Map</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="//code.jquery.com/jquery-latest.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.js"></script>
+    <script src="semicircle.js"></script>
+    <script src="map.js"></script>
+    <script src="map.ivb.js"></script>
+    <script>
+      $(function() {
+        IVB.init();
+      });
+    </script>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.css" />
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+      }
+      html,
+      body,
+      #map {
+        height: 100%;
+        font: 12px 'Droid Sans', sans-serif;
+      }
+      .leaflet-tile {
+        filter: grayscale(1);
+        opacity: 0.5 !important;
+      }
+      .leaflet-div-icon {
+        width: auto !important;
+        height: auto !important;
+        border: none;
+        background: none;
+        text-shadow: 1px 1px 2px white;
+        font-size: 10px;
+        font-weight: bold;
+        white-space: nowrap;
+        margin: -10px 0 0 10px !important;
+      }
+      .L3.Amras,
+      .L2.Technik-West,
+      .L2.Peerhofsiedlung,
+      .L2.Josef-Kerschbaumer-Straße,
+      .L1.Mühlauer-Brücke,
+      .L1.Bergisel,
+      .Hauptbahnhof,
+      .LSTB.Fulpmes,
+      .L6.Igls {
+        display: block;
+        font-size: 15px;
+      }
+      .L1.Stubaitalbahnhof,
+      .L2.Leipziger-Platz,
+      .L5.Leipziger-Platz,
+      .L5.Technik-West,
+      .L6.Bergisel,
+      .LSTB.Innsbruck-Hauptbahnhof {
+        display: none;
+      }
+      .Mitterhoferstraße,
+      .Philippine-Welser-Straße,
+      .Höttinger-Au-West,
+      .Höttinger-Auffahrt,
+      .Vögelebichl,
+      .Lohbachsiedlung-Ost,
+      .Technik,
+      .Lahntalweg,
+      .Technik-West,
+      .Bretterkeller,
+      .Tummelplatz,
+      .Tantegert,
+      .Lans-Sistrans,
+      .Lansersee,
+      .Bahnhof-Igls,
+      .Mutters,
+      .Burgstall,
+      .Hölltal,
+      .Gärberbach {
+        margin-top: 5px !important;
+      }
+      .Bergisel {
+        margin-left: 15px !important;
+        margin-top: -20px !important;
+      }
+      .Stubaitalbahnhof {
+        margin-left: -115px !important;
+      }
+      .Lohbachsiedlung-West,
+      .Leipziger-Platz,
+      .Museumstraße,
+      .Landesmuseum,
+      .Fürstenweg,
+      .Anichstraße-Rathausgalerien,
+      .Schützenstraße,
+      .Fritz-Konzert-Straße {
+        margin-top: -20px !important;
+      }
+      .Jugendherberge {
+        margin-top: 20px !important;
+      }
+      .Anichstraße-Rathausgalerien {
+        margin-left: 20px !important;
+      }
+      .Maria-Theresien-Straße {
+        margin-left: -30px !important;
+        margin-top: 10px !important;
+      }
+      .Klinik-Universität {
+        margin-left: -125px !important;
+      }
+      .Radetzkystraße,
+      .Terminal-Marktplatz {
+        margin-left: -105px !important;
+        margin-top: -20px !important;
+      }
+      .Triumphpforte-Casino {
+        margin-top: -25px !important;
+        margin-left: 0em !important;
+      }
+      .Bürgerstraße {
+        margin-left: -75px !important;
+      }
+      .Mutters,
+      .Natters {
+        margin-left: -50px !important;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="map"></div>
+  </body>
 </html>
-
