--- a/railway.html
+++ b/railway.html
@@ -1,70 +1,117 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Railway Map</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="//code.jquery.com/jquery-latest.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.js"></script>
-  <script src="map.js"></script>
-  <script>
-    var map, layer;
-    var nodes = {}, ways = {};
-    $(function () {
-      map = POImap.init();
-      layer = new L.GeoJSON(null, {
-        onEachFeature: function (e, layer) {
-          if (e.properties && e.properties.name) layer.bindPopup(e.properties.name);
-          if (e.properties && e.properties.style) layer.setStyle(e.properties.style);
-        }
+  <head>
+    <title>Railway Map</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="//code.jquery.com/jquery-latest.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.js"></script>
+    <script src="map.js"></script>
+    <script>
+      var map, layer;
+      var nodes = {},
+        ways = {};
+      $(function() {
+        map = POImap.init();
+        layer = new L.GeoJSON(null, {
+          onEachFeature: function(e, layer) {
+            if (e.properties && e.properties.name) layer.bindPopup(e.properties.name);
+            if (e.properties && e.properties.style) layer.setStyle(e.properties.style);
+          }
+        });
+        map.addLayer(layer);
+        map.zoomIn();
+        loadPoi();
+        map.on('moveend', loadPoi);
       });
-      map.addLayer(layer);
-      map.zoomIn();
-      loadPoi();
-      map.on('moveend', loadPoi);
-    });
 
-    var addedStopLabels = {};
-    function loadPoi() {
-      if (map.getZoom() < 12) {
-        return;
-      }
-
-      var tagsTable = function(tags, type, id) {
-        var r = $('<table>');
-        if (type && id)
-          r.append($('<tr>').append($('<th>').text('ID')).append($('<td>').text(id).append(' ').append($('<a>').attr({href: 'href="//localhost:8111/load_object?objects='+type+id, target: '_blank'}).text('edit')).append(' ').append($('<a>').attr({href: '//www.openstreetmap.org/browse/'+{w:'way',n:'node',r:'relation'}[type]+'/'+id, target: '_blank'}).text('browse'))));
-        for (var key in tags)
-          r.append($('<tr>').append($('<th>').text(key)).append($('<td>').text(tags[key])));
-        return $('<div>').append(r).html();
-      };
-
-      var handleNode = function (n) {
-        if (!n.tags || !n.tags.railway) return;
-        var icon = n.tags.railway == 'station'
-        ? {icon: '//raw.githubusercontent.com/mapbox/maki/mb-pages/renders/rail-18.png', size: 18}
-        : n.tags.railway == 'halt'
-        ? {icon: '//raw.githubusercontent.com/mapbox/maki/mb-pages/renders/rail-12.png', size: 12}
-        : undefined;
-        if (!icon) return;
-        if (!addedStopLabels[n.tags.name]) {
-          map.addLayer(new L.Marker(new L.LatLng(n.lat, n.lon), {icon: L.divIcon({html: n.tags.name})}));
-          addedStopLabels[n.tags.name] = true;
+      var addedStopLabels = {};
+      function loadPoi() {
+        if (map.getZoom() < 12) {
+          return;
         }
-        map.addLayer(new L.Marker(new L.LatLng(n.lat, n.lon), {
-          icon: L.icon({
-            iconUrl: icon.icon,
-            iconSize: new L.Point(icon.size, icon.size),
-            iconAnchor: new L.Point(icon.size/2, icon.size/2),
-            shadowSize: new L.Point(0, 0)
-          })
-        }).bindPopup(tagsTable(n.tags, 'n', n.id)));
-      };
 
-      var handleWay = function (w) {
-        if (ways[w.id] || !w.tags.railway) return;
-        if (-1 != $.inArray(w.tags.railway, ['tram', 'funicular'])) return;
-        /*
+        var tagsTable = function(tags, type, id) {
+          var r = $('<table>');
+          if (type && id)
+            r.append(
+              $('<tr>')
+                .append($('<th>').text('ID'))
+                .append(
+                  $('<td>')
+                    .text(id)
+                    .append(' ')
+                    .append(
+                      $('<a>')
+                        .attr({
+                          href: 'href="//localhost:8111/load_object?objects=' + type + id,
+                          target: '_blank'
+                        })
+                        .text('edit')
+                    )
+                    .append(' ')
+                    .append(
+                      $('<a>')
+                        .attr({
+                          href:
+                            '//www.openstreetmap.org/browse/' +
+                            {w: 'way', n: 'node', r: 'relation'}[type] +
+                            '/' +
+                            id,
+                          target: '_blank'
+                        })
+                        .text('browse')
+                    )
+                )
+            );
+          for (var key in tags)
+            r.append(
+              $('<tr>')
+                .append($('<th>').text(key))
+                .append($('<td>').text(tags[key]))
+            );
+          return $('<div>')
+            .append(r)
+            .html();
+        };
+
+        var handleNode = function(n) {
+          if (!n.tags || !n.tags.railway) return;
+          var icon =
+            n.tags.railway == 'station'
+              ? {
+                  icon: '//raw.githubusercontent.com/mapbox/maki/mb-pages/renders/rail-18.png',
+                  size: 18
+                }
+              : n.tags.railway == 'halt'
+              ? {
+                  icon: '//raw.githubusercontent.com/mapbox/maki/mb-pages/renders/rail-12.png',
+                  size: 12
+                }
+              : undefined;
+          if (!icon) return;
+          if (!addedStopLabels[n.tags.name]) {
+            map.addLayer(
+              new L.Marker(new L.LatLng(n.lat, n.lon), {icon: L.divIcon({html: n.tags.name})})
+            );
+            addedStopLabels[n.tags.name] = true;
+          }
+          map.addLayer(
+            new L.Marker(new L.LatLng(n.lat, n.lon), {
+              icon: L.icon({
+                iconUrl: icon.icon,
+                iconSize: new L.Point(icon.size, icon.size),
+                iconAnchor: new L.Point(icon.size / 2, icon.size / 2),
+                shadowSize: new L.Point(0, 0)
+              })
+            }).bindPopup(tagsTable(n.tags, 'n', n.id))
+          );
+        };
+
+        var handleWay = function(w) {
+          if (ways[w.id] || !w.tags.railway) return;
+          if (-1 != $.inArray(w.tags.railway, ['tram', 'funicular'])) return;
+          /*
         if (w.tags.bridge && w.tags.bridge != 'no')
           layer.addGeoJSON({
             type: 'Feature',
@@ -72,70 +119,76 @@
             properties: {style: {color: '#4E4D48', weight: 8}}
           });
         */
-        ways[w.id] = true;
-        var style = {};
-        style.color = -1 != $.inArray(w.tags.railway, ['rail', 'narrow_gauge', 'light_rail']) ? (!w.tags.usage
-          ? '#000000'
-          : w.tags.usage == 'industrial'
-          ? '#AC7812'
-          : w.tags.usage == 'branch'
-          ? '#4C5CB4'
-          : w.tags.usage == 'main'
-          ? '#00C819'
-          : w.tags.usage == 'highspeed'
-          ? '#D40000'
-          : '#d00')
-        : w.tags.railway == 'construction'
-        ? '#FFB600'
-        : w.tags.railway == 'disused'
-        ? '#000000' // dashed
-        : w.tags.railway == 'abandoned'
-        ? '#585858'
-        : '#20000000';
-        if (w.tags.tunnel == 'yes'
-          || w.tags.railway == 'construction'
-          || w.tags.railway == 'disused'
-          || w.tags.railway == 'abandoned')
-          style.svg = {'stroke-dasharray': '6,8'};
-        style.weight = w.tags.service ? 2 : 4;
-        layer.addData({
-          type: 'Feature',
-          geometry: w.geometry,
-          properties: {name: tagsTable(w.tags, 'w', w.id), style: style}
-        });
-      };
+          ways[w.id] = true;
+          var style = {};
+          style.color =
+            -1 != $.inArray(w.tags.railway, ['rail', 'narrow_gauge', 'light_rail'])
+              ? !w.tags.usage
+                ? '#000000'
+                : w.tags.usage == 'industrial'
+                ? '#AC7812'
+                : w.tags.usage == 'branch'
+                ? '#4C5CB4'
+                : w.tags.usage == 'main'
+                ? '#00C819'
+                : w.tags.usage == 'highspeed'
+                ? '#D40000'
+                : '#d00'
+              : w.tags.railway == 'construction'
+              ? '#FFB600'
+              : w.tags.railway == 'disused'
+              ? '#000000' // dashed
+              : w.tags.railway == 'abandoned'
+              ? '#585858'
+              : '#20000000';
+          if (
+            w.tags.tunnel == 'yes' ||
+            w.tags.railway == 'construction' ||
+            w.tags.railway == 'disused' ||
+            w.tags.railway == 'abandoned'
+          )
+            style.svg = {'stroke-dasharray': '6,8'};
+          style.weight = w.tags.service ? 2 : 4;
+          layer.addData({
+            type: 'Feature',
+            geometry: w.geometry,
+            properties: {name: tagsTable(w.tags, 'w', w.id), style: style}
+          });
+        };
 
-      POImap.loadAndParseOverpassJSON(
+        POImap.loadAndParseOverpassJSON(
           '//www.overpass-api.de/api/interpreter?data=[out:json];(node[railway](BBOX));out;(way[railway](BBOX);node(w));out;',
-          handleNode, handleWay, null);
-
-    }
-
-  </script>
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.css" />
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-    }
-    html, body, #map {
-      height: 100%;
-      font: 10pt 'Droid Sans', sans-serif;
-    }
-    .leaflet-div-icon {
-      width: auto !important;
-      height: auto !important;
-      border: none;
-      background: none;
-      text-shadow: 1px 1px 2px white;
-      font-weight: bold;
-      white-space: nowrap;
-      margin: -10px 0 0 10px !important;
-    }
-  </style>
-</head>
-<body>
-  <div id="map"></div>
-</body>
+          handleNode,
+          handleWay,
+          null
+        );
+      }
+    </script>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.css" />
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+      }
+      html,
+      body,
+      #map {
+        height: 100%;
+        font: 10pt 'Droid Sans', sans-serif;
+      }
+      .leaflet-div-icon {
+        width: auto !important;
+        height: auto !important;
+        border: none;
+        background: none;
+        text-shadow: 1px 1px 2px white;
+        font-weight: bold;
+        white-space: nowrap;
+        margin: -10px 0 0 10px !important;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="map"></div>
+  </body>
 </html>
-
