Update jquery, leaflet; load from unpkg.com

--- a/aed.html
+++ b/aed.html
@@ -4,8 +4,8 @@
     <title>AED Map</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="//code.jquery.com/jquery-latest.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.js"></script>
+    <script src="https://unpkg.com/jquery@3.4.1/dist/jquery.min.js"></script>
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
     <script src="map.js"></script>
     <script>
       var map;
@@ -47,7 +47,7 @@
         });
       }
     </script>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
     <style>
       body {
         padding: 0;
