--- a/wiwosm.html
+++ b/wiwosm.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://unpkg.com/jquery@3.4.1/dist/jquery.min.js"></script>
-    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet@1.8.0-beta.3/dist/leaflet.js"></script>
     <script src="semicircle.js"></script>
     <script src="map.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.5/proj4.js"></script>
@@ -70,7 +70,7 @@
         );
       });
     </script>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0-beta.3/dist/leaflet.css" />
     <style>
       body {
         padding: 0;
