--- a/ivb.html
+++ b/ivb.html
@@ -45,6 +45,7 @@
       .L2.Technik-West,
       .L2.Peerhofsiedlung,
       .L2.Josef-Kerschbaumer-Straße,
+      .L5.Rum-Bahnhof,
       .L1.Mühlauer-Brücke,
       .L1.Bergisel,
       .Hauptbahnhof,
@@ -63,7 +64,7 @@
       }
       .Mitterhoferstraße,
       .Philippine-Welser-Straße,
-      .Höttinger-Au-West,
+      .Höttinger-Au-EKZ-West,
       .Höttinger-Auffahrt,
       .Vögelebichl,
       .Lohbachsiedlung-Ost,
@@ -76,6 +77,8 @@
       .Lans-Sistrans,
       .Lansersee,
       .Bahnhof-Igls,
+      .Neu-Rum-Volksschule-Serlesstraße,
+      .Neu-Rum-Glungezerstraße,
       .Mutters,
       .Burgstall,
       .Hölltal,
@@ -95,7 +98,6 @@
       .Landesmuseum,
       .Fürstenweg,
       .Anichstraße-Rathausgalerien,
-      .Schützenstraße,
       .Fritz-Konzert-Straße {
         margin-top: -20px !important;
       }
